--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1387,3 +1387,72 @@ select {
   }
 }
 
+
+.ttd {
+  background-color: red;
+}
+
+.pill-available {
+  border-radius: 5px;
+  background: #EEE;
+  color:  #06C100;
+  padding: 5px;
+  text-align: center;
+  max-width: 140px;
+  font-size: 12px;
+}
+
+.pill-no-available {
+  border-radius: 5px;
+  background: #EEE;
+  color:  #FF0000;
+  padding: 5px;
+  text-align: center;
+  max-width: 140px;
+  font-size: 12px;
+}
+
+.table-p1 {
+  width: 25%;
+  text-align: center;
+  padding: 20px
+}
+
+.table-p2 {
+  width: 30%;
+  text-align: left;
+  padding: 20px
+}
+
+.table-p3 {
+  width: 45%;
+  text-align: center;
+  padding: 20px
+}
+
+.text-grey {
+  color: #CCC;
+}
+
+.text-sku {
+  color: #CCC;
+  padding-left: 5px;
+}
+
+.table-products {
+  width: 100%;
+  border: 1px #ccc solid;
+}
+
+.separator {
+  height: 10px;
+}
+
+.separator-20 {
+  height: 20px;
+}
+
+.width-140 {
+  width: 140px;
+  text-align: center;
+} 
